--- a/src/css/input.css
+++ b/src/css/input.css
@@ -274,7 +274,9 @@
   transform: translateY(0);
 }
 
-
+.skill_grid{
+  @apply h-full w-full flex items-center place-content-center hover:scale-[101%];
+}
 
 .box_code{
     @apply rounded-md shadow-sm border border-slate-200 bg-white p-1 w-12 h-12 m-1 appearance-none text-center font-light text-2xl 
