--- a/src/css/output.css
+++ b/src/css/output.css
@@ -402,6 +402,8 @@
     --animate-fade-in-scale: fade-in-scale 600ms ease-in-out;
     --animate-fade-in-y: fade-in-y 600ms ease-in-out;
     --animate-fade-fall: fade-fall 1s ease-out;
+    --animate-card-skill-out: card-skill-out 510ms ease-out;
+    --animate-card-skill-in: card-skill-in 510ms ease-out;
   }
 }
 @layer base {
@@ -618,8 +620,17 @@
   .top-2 {
     top: calc(var(--spacing) * 2);
   }
+  .top-3 {
+    top: calc(var(--spacing) * 3);
+  }
+  .top-4 {
+    top: calc(var(--spacing) * 4);
+  }
   .top-5 {
     top: calc(var(--spacing) * 5);
+  }
+  .top-6 {
+    top: calc(var(--spacing) * 6);
   }
   .top-10 {
     top: calc(var(--spacing) * 10);
@@ -648,6 +659,15 @@
   .right-20 {
     right: calc(var(--spacing) * 20);
   }
+  .-bottom-3 {
+    bottom: calc(var(--spacing) * -3);
+  }
+  .-bottom-4 {
+    bottom: calc(var(--spacing) * -4);
+  }
+  .-bottom-5 {
+    bottom: calc(var(--spacing) * -5);
+  }
   .-bottom-16 {
     bottom: calc(var(--spacing) * -16);
   }
@@ -660,6 +680,9 @@
   .bottom-2 {
     bottom: calc(var(--spacing) * 2);
   }
+  .bottom-3 {
+    bottom: calc(var(--spacing) * 3);
+  }
   .bottom-4 {
     bottom: calc(var(--spacing) * 4);
   }
@@ -669,11 +692,26 @@
   .bottom-7 {
     bottom: calc(var(--spacing) * 7);
   }
+  .bottom-8 {
+    bottom: calc(var(--spacing) * 8);
+  }
+  .bottom-9 {
+    bottom: calc(var(--spacing) * 9);
+  }
   .bottom-10 {
     bottom: calc(var(--spacing) * 10);
   }
   .bottom-16 {
     bottom: calc(var(--spacing) * 16);
+  }
+  .left-1 {
+    left: calc(var(--spacing) * 1);
+  }
+  .left-2 {
+    left: calc(var(--spacing) * 2);
+  }
+  .left-3 {
+    left: calc(var(--spacing) * 3);
   }
   .left-4 {
     left: calc(var(--spacing) * 4);
@@ -681,8 +719,17 @@
   .left-5 {
     left: calc(var(--spacing) * 5);
   }
+  .left-6 {
+    left: calc(var(--spacing) * 6);
+  }
   .left-7 {
     left: calc(var(--spacing) * 7);
+  }
+  .left-8 {
+    left: calc(var(--spacing) * 8);
+  }
+  .left-9 {
+    left: calc(var(--spacing) * 9);
   }
   .left-10 {
     left: calc(var(--spacing) * 10);
@@ -981,6 +1028,18 @@
   .h-64 {
     height: calc(var(--spacing) * 64);
   }
+  .h-\[103vh\] {
+    height: 103vh;
+  }
+  .h-\[105vh\] {
+    height: 105vh;
+  }
+  .h-\[140vh\] {
+    height: 140vh;
+  }
+  .h-\[200vh\] {
+    height: 200vh;
+  }
   .h-\[20rem\] {
     height: 20rem;
   }
@@ -1004,18 +1063,6 @@
   }
   .h-\[50rem\] {
     height: 50rem;
-  }
-  .h-\[103vh\] {
-    height: 103vh;
-  }
-  .h-\[105vh\] {
-    height: 105vh;
-  }
-  .h-\[140vh\] {
-    height: 140vh;
-  }
-  .h-\[200vh\] {
-    height: 200vh;
   }
   .h-\[680px\] {
     height: 680px;
@@ -1068,17 +1115,14 @@
   .w-\[64rem\] {
     width: 64rem;
   }
-  .w-\[70rem\] {
-    width: 70rem;
-  }
-  .w-\[75rem\] {
-    width: 75rem;
-  }
   .w-\[76rem\] {
     width: 76rem;
   }
-  .w-\[80rem\] {
-    width: 80rem;
+  .w-\[77rem\] {
+    width: 77rem;
+  }
+  .w-\[79rem\] {
+    width: 79rem;
   }
   .w-auto {
     width: auto;
@@ -1234,6 +1278,12 @@
   }
   .transform-none {
     transform: none;
+  }
+  .animate-card-skill-in {
+    animation: var(--animate-card-skill-in);
+  }
+  .animate-card-skill-out {
+    animation: var(--animate-card-skill-out);
   }
   .animate-fade-fall {
     animation: var(--animate-fade-fall);
@@ -1814,14 +1864,29 @@
   .bg-\(color\:--my-color\) {
     background-color: var(--my-color);
   }
+  .bg-\[\#2a0bef\] {
+    background-color: #2a0bef;
+  }
+  .bg-\[\#045deb\] {
+    background-color: #045deb;
+  }
   .bg-\[\#0088cc\] {
     background-color: #0088cc;
   }
-  .bg-\[\#1256ea\] {
-    background-color: #1256ea;
+  .bg-\[\#510af8\] {
+    background-color: #510af8;
   }
-  .bg-\[\#666888\] {
-    background-color: #666888;
+  .bg-\[\#73769c\] {
+    background-color: #73769c;
+  }
+  .bg-\[\#ebc907\] {
+    background-color: #ebc907;
+  }
+  .bg-\[\#f74904\] {
+    background-color: #f74904;
+  }
+  .bg-\[\#ff0000\] {
+    background-color: #ff0000;
   }
   .bg-\[\#ffbf00\] {
     background-color: #ffbf00;
@@ -1838,29 +1903,14 @@
   .bg-black\/70 {
     background-color: color-mix(in oklab, var(--color-black) 70%, transparent);
   }
-  .bg-blue-700 {
-    background-color: var(--color-blue-700);
-  }
-  .bg-blue-800 {
-    background-color: var(--color-blue-800);
-  }
   .bg-cyan-900 {
     background-color: var(--color-cyan-900);
-  }
-  .bg-green-600 {
-    background-color: var(--color-green-600);
   }
   .bg-indigo-600 {
     background-color: var(--color-indigo-600);
   }
   .bg-orange-400 {
     background-color: var(--color-orange-400);
-  }
-  .bg-orange-500 {
-    background-color: var(--color-orange-500);
-  }
-  .bg-orange-700 {
-    background-color: var(--color-orange-700);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -1871,12 +1921,6 @@
   .bg-red-500\/\[50\%\] {
     background-color: color-mix(in oklab, var(--color-red-500) 50%, transparent);
   }
-  .bg-red-600 {
-    background-color: var(--color-red-600);
-  }
-  .bg-red-700 {
-    background-color: var(--color-red-700);
-  }
   .bg-slate-100 {
     background-color: var(--color-slate-100);
   }
@@ -1885,12 +1929,6 @@
   }
   .bg-white {
     background-color: var(--color-white);
-  }
-  .bg-yellow-400 {
-    background-color: var(--color-yellow-400);
-  }
-  .bg-yellow-500 {
-    background-color: var(--color-yellow-500);
   }
   .bg-zinc-900 {
     background-color: var(--color-zinc-900);
@@ -2079,6 +2117,12 @@
   .p-10 {
     padding: calc(var(--spacing) * 10);
   }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
+  .px-2 {
+    padding-inline: calc(var(--spacing) * 2);
+  }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
@@ -2093,6 +2137,12 @@
   }
   .px-40 {
     padding-inline: calc(var(--spacing) * 40);
+  }
+  .px-\[3px\] {
+    padding-inline: 3px;
+  }
+  .px-\[10px\] {
+    padding-inline: 10px;
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -2111,6 +2161,9 @@
   }
   .pt-20 {
     padding-top: calc(var(--spacing) * 20);
+  }
+  .pt-36 {
+    padding-top: calc(var(--spacing) * 36);
   }
   .pr-1 {
     padding-right: calc(var(--spacing) * 1);
@@ -2212,6 +2265,36 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
+  .text-\[15\.2px\] {
+    font-size: 15.2px;
+  }
+  .text-\[15\.3px\] {
+    font-size: 15.3px;
+  }
+  .text-\[15\.4px\] {
+    font-size: 15.4px;
+  }
+  .text-\[15\.5px\] {
+    font-size: 15.5px;
+  }
+  .text-\[15px\] {
+    font-size: 15px;
+  }
+  .text-\[16\.5px\] {
+    font-size: 16.5px;
+  }
+  .text-\[16\.6px\] {
+    font-size: 16.6px;
+  }
+  .text-\[16\.7px\] {
+    font-size: 16.7px;
+  }
+  .text-\[16\.8px\] {
+    font-size: 16.8px;
+  }
+  .text-\[17px\] {
+    font-size: 17px;
+  }
   .leading-none {
     --tw-leading: 1;
     line-height: 1;
@@ -2227,6 +2310,10 @@
   .font-extrabold {
     --tw-font-weight: var(--font-weight-extrabold);
     font-weight: var(--font-weight-extrabold);
+  }
+  .font-extralight {
+    --tw-font-weight: var(--font-weight-extralight);
+    font-weight: var(--font-weight-extralight);
   }
   .font-light {
     --tw-font-weight: var(--font-weight-light);
@@ -2318,14 +2405,77 @@
   .text-\[\#ffbf00\] {
     color: #ffbf00;
   }
+  .text-\[16\.7\] {
+    color: 16.7;
+  }
+  .text-blue-100 {
+    color: var(--color-blue-100);
+  }
+  .text-blue-100\/70 {
+    color: color-mix(in oklab, var(--color-blue-100) 70%, transparent);
+  }
+  .text-blue-100\/80 {
+    color: color-mix(in oklab, var(--color-blue-100) 80%, transparent);
+  }
+  .text-blue-200 {
+    color: var(--color-blue-200);
+  }
+  .text-cyan-50 {
+    color: var(--color-cyan-50);
+  }
+  .text-cyan-50\/70 {
+    color: color-mix(in oklab, var(--color-cyan-50) 70%, transparent);
+  }
+  .text-cyan-100 {
+    color: var(--color-cyan-100);
+  }
+  .text-cyan-100\/70 {
+    color: color-mix(in oklab, var(--color-cyan-100) 70%, transparent);
+  }
+  .text-cyan-100\/80 {
+    color: color-mix(in oklab, var(--color-cyan-100) 80%, transparent);
+  }
+  .text-cyan-200 {
+    color: var(--color-cyan-200);
+  }
+  .text-indigo-100 {
+    color: var(--color-indigo-100);
+  }
+  .text-indigo-100\/90 {
+    color: color-mix(in oklab, var(--color-indigo-100) 90%, transparent);
+  }
   .text-indigo-600 {
     color: var(--color-indigo-600);
   }
   .text-indigo-700 {
     color: var(--color-indigo-700);
   }
+  .text-orange-100 {
+    color: var(--color-orange-100);
+  }
+  .text-orange-100\/70 {
+    color: color-mix(in oklab, var(--color-orange-100) 70%, transparent);
+  }
+  .text-orange-100\/80 {
+    color: color-mix(in oklab, var(--color-orange-100) 80%, transparent);
+  }
+  .text-orange-100\/90 {
+    color: color-mix(in oklab, var(--color-orange-100) 90%, transparent);
+  }
+  .text-red-100 {
+    color: var(--color-red-100);
+  }
+  .text-red-100\/90 {
+    color: color-mix(in oklab, var(--color-red-100) 90%, transparent);
+  }
   .text-slate-100 {
     color: var(--color-slate-100);
+  }
+  .text-slate-100\/90 {
+    color: color-mix(in oklab, var(--color-slate-100) 90%, transparent);
+  }
+  .text-slate-200 {
+    color: var(--color-slate-200);
   }
   .text-slate-300 {
     color: var(--color-slate-300);
@@ -2345,8 +2495,38 @@
   .text-slate-900 {
     color: var(--color-slate-900);
   }
+  .text-slate-950 {
+    color: var(--color-slate-950);
+  }
+  .text-slate-950\/50 {
+    color: color-mix(in oklab, var(--color-slate-950) 50%, transparent);
+  }
   .text-white {
     color: var(--color-white);
+  }
+  .text-yellow-100 {
+    color: var(--color-yellow-100);
+  }
+  .text-yellow-200 {
+    color: var(--color-yellow-200);
+  }
+  .text-yellow-900 {
+    color: var(--color-yellow-900);
+  }
+  .text-yellow-950 {
+    color: var(--color-yellow-950);
+  }
+  .text-yellow-950\/50 {
+    color: color-mix(in oklab, var(--color-yellow-950) 50%, transparent);
+  }
+  .text-yellow-950\/60 {
+    color: color-mix(in oklab, var(--color-yellow-950) 60%, transparent);
+  }
+  .text-yellow-950\/65 {
+    color: color-mix(in oklab, var(--color-yellow-950) 65%, transparent);
+  }
+  .text-yellow-950\/70 {
+    color: color-mix(in oklab, var(--color-yellow-950) 70%, transparent);
   }
   .capitalize {
     text-transform: capitalize;
@@ -2527,10 +2707,6 @@
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-lg {
-    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -2545,12 +2721,6 @@
   }
   .shadow-initial {
     --tw-shadow-color: initial;
-  }
-  .shadow-zinc-800 {
-    --tw-shadow-color: var(--color-zinc-800);
-  }
-  .shadow-zinc-800\/13 {
-    --tw-shadow-color: color-mix(in oklab, var(--color-zinc-800) 13%, transparent);
   }
   .inset-shadow-initial {
     --tw-inset-shadow-color: initial;
@@ -3031,9 +3201,12 @@
   width: 100%;
   place-content: center;
   align-items: center;
+  --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  --tw-shadow-color: color-mix(in oklab, var(--color-black) 30%, transparent);
   &:hover {
     @media (hover: hover) {
-      scale: 101%;
+      scale: 102%;
     }
   }
 }
@@ -3298,14 +3471,6 @@
 .textShadow2 {
   text-shadow: 0 1px 2px rgba(46, 46, 46);
 }
-@layer components {
-  .card {
-    background-color: var(--color-white);
-    border-radius: var(--rounded-lg);
-    padding: var(--spacing-6);
-    box-shadow: var(--shadow-xl);
-  }
-}
 @keyframes spin {
   to {
     transform: rotate(360deg);
@@ -3514,6 +3679,22 @@
   100% {
     opacity: 1;
     transform: translateY(0px);
+  }
+}
+@keyframes card-skill-out {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(90deg);
+  }
+}
+@keyframes card-skill-in {
+  0% {
+    transform: rotateY(90deg);
+  }
+  100% {
+    transform: rotateY(0deg);
   }
 }
 @property --tw-translate-x {
